k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: roblobob/k8s-server-time-client:c99c319ffc634f602976e7839e9397046231cb37
          ports:
            - containerPort: 8080
