k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: roblobob/k8s-server-time-server:83054ab4034ac6658ec8356e4eab2e64eb7e07e5
          ports:
            - containerPort: 3000
