k8s/ingress-service.yml
# https://microk8s.io/docs/addon-ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 8080
      - path: /api/
        backend:
          serviceName: server-cluster-ip-service
          servicePort: 3000
